# language-security-project

./: .gitignore  README.md  attack_payload.py  attack_payloads.py  diary_app.py  exploit.py  exploit_demo.py  main.py  pyproject.toml  requirements.txt  run_attack.py  safe_alternatives.py  safe_pickle_demo.py  vulnerable_app.py
exploits/: command_execution.py  file_operations.py  reverse_shell.py
offline-tampering/: run_attack.py  vulnerable_app.py
offline_tampering/: generate_malicious_pickle.py  secure_app.py  vulnerable_app.py
web_app/: diary_app.py  generate_malicious_diary.py
